syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.igx.cloud.robo";

service GameService {
    rpc connect(stream Action) returns (stream FrameUpdate);
}

message Robot {
    string id = 1;
    string name = 2;
    Coordinates coordinates = 3;
    double speed = 4;
    double bearing = 5;
    int32 health = 6;
    int32 score = 7;
    int32 projectiles = 8;
}

message Projectile {
    Coordinates coordinates = 1;
    double bearing = 2;
    string robotId = 3;
}

message FrameUpdate{
    int64 timestamp = 1;
    int32 deltaTiming = 2;
    Robot robotState = 3;
    EventType eventType = 4;
    oneof event {
        StartedEvent startedEvent = 100;
        DestroyedEvent destroyedEvent = 101;
        HitByEvent hitByEvent = 102;
        HitEnemyEvent hitEnemyEvent = 103;
        EnemyDetectedEvent enemyDetectedEvent = 104;
        CollisionDetectedEvent collisionDetectedEvent = 105;
    }
}

message Action {
    int64 timestamp = 1;
    string id = 2;
    ActionType actionType = 3;
    double value = 4;
}

message Coordinates {
    double x = 1;
    double y = 2;
}

message StartedEvent {

}

message DestroyedEvent {

}

message HitByEvent {
    int64 timestamp = 1;
    Robot source = 2;
}

message HitEnemyEvent {
    int64 timestamp = 1;
    Robot target = 2;
}

message EnemyDetectedEvent {
    int64 timestamp = 1;
    Robot target = 2;

}

message CollisionDetectedEvent {

}

enum EventType {
    STARTED = 0;
    DESTROYED = 1;
    HIT_BY = 2;
    HIT_ENEMY = 3;
    COLISION_DETECTED = 4;
    ENEMY_DETECTED = 5;
    STATUS_UPDATED = 10;
}

enum ActionType {
    JOIN = 0;
    ROTATE = 1;
    THROTTLE = 2;
    FIRE = 3;
    LEAVE = 4;
}